<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_card_pad"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/customRed"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_card_list_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:elevation="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sayur_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/user_card_list_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/fredoka_one"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_card_list_image"
            app:layout_constraintTop_toTopOf="@+id/user_card_list_image"
            tools:text="@string/gihubber_user_name_temporary" />

        <TextView
            android:id="@+id/user_card_list_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/user_card_list_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_card_list_image"
            app:layout_constraintTop_toBottomOf="@+id/user_card_list_username"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/user_card_list_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/fredoka_one"
            android:maxLines="1"
            android:text="@string/working_here_temporary"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/user_card_list_image"
            app:layout_constraintEnd_toStartOf="@+id/user_card_list_followers"
            app:layout_constraintStart_toEndOf="@+id/user_card_list_image"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/user_card_list_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/followers_temporary"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/justtext"
            app:layout_constraintEnd_toStartOf="@+id/justtext"
            app:layout_constraintTop_toTopOf="@+id/justtext"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/justtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/followers"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/user_card_list_image"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>