<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".InfoDetailsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_detail_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/sayur_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/gihubber_user_name_temporary"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_detail_image" />

    <TextView
        android:id="@+id/user_detail_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/customOrange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_user_name" />

    <TextView
        android:id="@+id/user_detail_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:ellipsize="end"
        android:fontFamily="@font/fredoka_one"
        android:maxLines="1"
        android:text="@string/company"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/user_detail_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_detail_name" />

    <TextView
        android:id="@+id/user_detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/location"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/user_detail_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_detail_company" />

    <TextView
        android:id="@+id/user_detail_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/followers_temporary"
        android:textColor="@color/customRed"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/user_detail_repository"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_detail_company" />

    <TextView
        android:id="@+id/user_detail_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/followers_temporary"
        android:textColor="@color/customGreen"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/user_detail_follower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_detail_repository"
        app:layout_constraintTop_toTopOf="@+id/user_detail_follower" />

    <TextView
        android:id="@+id/user_detail_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/followers_temporary"
        android:textColor="@color/customOrange"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/user_detail_follower"
        app:layout_constraintEnd_toStartOf="@+id/user_detail_following"
        app:layout_constraintStart_toEndOf="@+id/user_detail_follower"
        app:layout_constraintTop_toTopOf="@+id/user_detail_follower" />

    <TextView
        android:id="@+id/follows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/followers"
        android:textColor="#FF6E40"
        app:layout_constraintEnd_toEndOf="@+id/user_detail_follower"
        app:layout_constraintStart_toStartOf="@+id/user_detail_follower"
        app:layout_constraintTop_toBottomOf="@+id/user_detail_follower" />

    <TextView
        android:id="@+id/repos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/repository"
        android:textColor="@color/customOrange"
        app:layout_constraintEnd_toEndOf="@+id/user_detail_repository"
        app:layout_constraintStart_toStartOf="@+id/user_detail_repository"
        app:layout_constraintTop_toBottomOf="@+id/user_detail_repository" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/following"
        android:textColor="@color/customGreen"
        app:layout_constraintEnd_toEndOf="@+id/user_detail_following"
        app:layout_constraintStart_toStartOf="@+id/user_detail_following"
        app:layout_constraintTop_toBottomOf="@+id/user_detail_following" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repos"
        app:tabIndicatorGravity="bottom"
        app:tabSelectedTextColor="@color/customGreen"
        app:tabTextColor="?attr/colorPrimary"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <ProgressBar
        android:id="@+id/loadingbarDetails"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/love_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_hate"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/hale_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:visibility="gone"
        app:backgroundTint="@color/customRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_love"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
